--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,12 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/editorjs": "^2.23.2",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/link": "^2.4.0",
+    "@editorjs/list": "^1.6.2",
+    "@editorjs/table": "^2.0.1",
     "sirv-cli": "^1.0.0"
   },
   "author": "a-poor"
